deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts
  labels:
    app: accounts
spec:
  type: ClusterIP
  selector:
    app: accounts
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
